hphp/test/zend/good/tests/classes/autoload/autoload_012.php
<?hh

<<__EntryPoint>> function autoload_012(): void {
call_user_func("UndefC::test");
}
