hphp/test/zend/bad/038.php
<?php

var_dump(array(function() { } => 1));

?>